--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "express": "^4.16.2",
     "firebase-admin": "^5.5.1",
     "firebase-functions": "^0.7.3"
   },
