--- a/firebase.json
+++ b/firebase.json
@@ -22,7 +22,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "private, no-cache"
+            "value": "no-cache, no-store, must-revalidate"
           }
         ]
       }
